# Essentials-C

./: .clang-format  CMakeLists.txt  LICENSE  README.md  essentials.c  essentials.h  essentialsc.c  essentialsc.h  main  main.c
.scripts/: FormatCode
include/: essentialsc.h
include/essentialsc/: essentialsc.h
src/: essentialsc.c
